--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.0.0",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
@@ -35,7 +36,6 @@
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "autoprefixer": "^10.4.19"
+    "typescript": "^5.7.2"
   }
 }
